# greentic-demo

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml  publish.yml
ci/: local_check.sh
cmd/greentic-demo/: main.rs
crates/greentic-runner-host/: Cargo.toml
crates/greentic-runner-host/src/: lib.rs  pack.rs  telemetry.rs
crates/greentic-runner-host/src/runner/: engine.rs
docs/: deploy.md  quickstart.md
env/: .env.example  telemetry.json
examples/: index.json
examples/deployment/generic-deploy.gtpack/: README.md  manifest.yaml
examples/deployment/generic-deploy.gtpack/components/: greentic.deploy.generic.iac.wasm  greentic.deploy.generic.iac.yaml
examples/deployment/generic-deploy.gtpack/flows/: configure_greentic_deploy_generic_iac_basic.ygtc  deploy_generic_iac.ygtc
examples/deployment/stub-deploy-component/: Cargo.toml  README.md
examples/deployment/stub-deploy-component/src/: main.rs
infra/terraform/: README.md
infra/terraform/envs/aws/: main.tf  outputs.tf  variables.tf
infra/terraform/envs/azure/: main.tf  outputs.tf
infra/terraform/envs/dev/aws/: terraform.tfvars
infra/terraform/envs/dev/azure/: terraform.tfvars
infra/terraform/envs/dev/gcp/: terraform.tfvars
infra/terraform/envs/gcp/: main.tf  outputs.tf
infra/terraform/envs/prod/aws/: terraform.tfvars
infra/terraform/envs/prod/azure/: terraform.tfvars
infra/terraform/envs/prod/gcp/: terraform.tfvars
infra/terraform/modules/aws/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/azure/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/gcp/: main.tf  outputs.tf  variables.tf
packs/customera/: bindings.yaml  index.ygtc
packs/customerb/: bindings.yaml  index.ygtc
packs/customerc/: bindings.yaml  index.ygtc
scripts/: matrix_helpers.py  matrix_preview.py
src/: config.rs  health.rs  lib.rs  loader.rs  logging.rs  nats_bridge.rs  runner_bridge.rs  secrets.rs  telemetry.rs  types.rs
src/runner_shim/: mod.rs  shim.rs
tests/: test_deployment_demo_pack.py  test_matrix_helpers.py
