[package]
name = "greentic-runner-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
futures = "0.3"
greentic-flow = { path = "../../../greentic-flow" }
greentic-interfaces = { path = "../../../greentic-interfaces" }
greentic-mcp = { package = "mcp-exec", path = "../../../greentic-mcp/crates/mcp-exec" }
greentic-telemetry = { path = "../../../greentic-telemetry" }
greentic-types = { path = "../../../greentic-types" }
handlebars = "6"
hex = "0.4"
lru = "0.12"
once_cell = "1.18"
parking_lot = "0.12"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2.4"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["macros", "serde-well-known"] }
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
wasmparser = "0.240"
wasmtime = { version = "38.0", features = ["component-model"] }
wasmtime-wasi = "38.0"
